[gd_scene load_steps=18 format=3 uid="uid://g4v7cfoaf7lk"]

[ext_resource type="FontFile" path="res://Assets/Fonts/Roboto12.tres" id="1"]
[ext_resource type="FontFile" path="res://Assets/Fonts/Roboto40.tres" id="2"]
[ext_resource type="StyleBox" path="res://Assets/Themes/Dark/PanelSuperDarkGreen.tres" id="3"]
[ext_resource type="Theme" uid="uid://c5lr422jpugj7" path="res://Assets/Themes/Roboto12Clean.tres" id="4"]
[ext_resource type="Script" path="res://Scripts/CustomTransparentButton.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://blx2vowioew71" path="res://Assets/Buttons/X_normal.png" id="6"]
[ext_resource type="Script" path="res://Scripts/Views/NoteButton.gd" id="7"]
[ext_resource type="Script" path="res://Scripts/Views/Notes.gd" id="10"]
[ext_resource type="Texture2D" uid="uid://paige6pop8p2" path="res://Assets/Buttons/TimeTrackBtnWhite.png" id="11"]

[sub_resource type="StyleBoxEmpty" id="3"]

[sub_resource type="StyleBoxFlat" id="5"]
bg_color = Color(0.576471, 0.627451, 0.631373, 1)
draw_center = false

[sub_resource type="StyleBoxEmpty" id="12"]

[sub_resource type="StyleBoxEmpty" id="13"]

[sub_resource type="StyleBoxEmpty" id="14"]

[sub_resource type="StyleBoxEmpty" id="15"]

[sub_resource type="Theme" id="10"]
TextEdit/colors/background_color = Color(0, 0, 0, 0)
TextEdit/colors/bookmark_color = Color(0.08, 0.49, 0.98, 1)
TextEdit/colors/brace_mismatch_color = Color(1, 0.2, 0.2, 1)
TextEdit/colors/breakpoint_color = Color(0.8, 0.8, 0.4, 0.2)
TextEdit/colors/caret_background_color = Color(0, 0, 0, 1)
TextEdit/colors/caret_color = Color(0.854902, 0.423529, 0.384314, 1)
TextEdit/colors/code_folding_color = Color(0.8, 0.8, 0.8, 0.8)
TextEdit/colors/completion_background_color = Color(0.17, 0.16, 0.2, 1)
TextEdit/colors/completion_existing_color = Color(0.87, 0.87, 0.87, 0.13)
TextEdit/colors/completion_font_color = Color(0.67, 0.67, 0.67, 1)
TextEdit/colors/completion_scroll_color = Color(1, 1, 1, 1)
TextEdit/colors/completion_selected_color = Color(0.26, 0.26, 0.27, 1)
TextEdit/colors/current_line_color = Color(0.25, 0.25, 0.26, 0.8)
TextEdit/colors/executing_line_color = Color(0.2, 0.8, 0.2, 0.4)
TextEdit/colors/font_color = Color(0.88, 0.88, 0.88, 1)
TextEdit/colors/font_color_readonly = Color(0.88, 0.88, 0.88, 0.5)
TextEdit/colors/font_color_selected = Color(0, 0, 0, 1)
TextEdit/colors/function_color = Color(0.4, 0.64, 0.81, 1)
TextEdit/colors/line_number_color = Color(0.67, 0.67, 0.67, 0.4)
TextEdit/colors/mark_color = Color(1, 0.4, 0.4, 0.4)
TextEdit/colors/member_variable_color = Color(0.9, 0.31, 0.35, 1)
TextEdit/colors/number_color = Color(0.92, 0.58, 0.2, 1)
TextEdit/colors/safe_line_number_color = Color(0.67, 0.78, 0.67, 0.6)
TextEdit/colors/selection_color = Color(0.49, 0.49, 0.49, 1)
TextEdit/colors/symbol_color = Color(0.94, 0.94, 0.94, 1)
TextEdit/colors/word_highlighted_color = Color(0.8, 0.9, 0.9, 0.15)
TextEdit/constants/completion_lines = 7
TextEdit/constants/completion_max_width = 50
TextEdit/constants/completion_scroll_width = 3
TextEdit/constants/line_spacing = 4
TextEdit/fonts/font = null
TextEdit/icons/fold = null
TextEdit/icons/folded = null
TextEdit/icons/space = null
TextEdit/icons/tab = null
TextEdit/styles/completion = SubResource("12")
TextEdit/styles/focus = SubResource("13")
TextEdit/styles/normal = SubResource("14")
TextEdit/styles/read_only = SubResource("15")

[sub_resource type="Theme" id="11"]
default_font = ExtResource("1")

[node name="Notes" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 990.0
offset_bottom = 571.0
script = ExtResource("10")
title = null

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -30.0
theme_override_constants/separation = 0

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4")
theme_override_constants/separation = 35
theme_override_constants/autohide = 0
split_offset = 243

[node name="Panel" type="Panel" parent="VBoxContainer/HSplitContainer"]
self_modulate = Color(1, 1, 1, 0.686275)
clip_contents = true
layout_mode = 2
theme_override_styles/panel = ExtResource("3")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HSplitContainer/Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 14.0
offset_right = -13.0
offset_bottom = -14.0

[node name="NoteButtons" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/Panel/ScrollContainer"]
custom_minimum_size = Vector2(200, 440)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4")

[node name="DefaultButton" type="Button" parent="VBoxContainer/HSplitContainer/Panel/ScrollContainer/NoteButtons"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.415686)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("3")
toggle_mode = true
text = "NoteButton"
flat = true
script = ExtResource("7")
delete_btn_colour = Color(0.854902, 0.423529, 0.384314, 0.615686)

[node name="TimeTrack" type="TextureButton" parent="VBoxContainer/HSplitContainer/Panel/ScrollContainer/NoteButtons/DefaultButton"]
custom_minimum_size = Vector2(19, 0)
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -49.6991
offset_top = -16.1582
offset_right = -29.6991
offset_bottom = 17.8418
pivot_offset = Vector2(9.5, 9.5)
size_flags_horizontal = 9
tooltip_text = "Time track again"
mouse_filter = 1
texture_normal = ExtResource("11")
stretch_mode = 5
script = ExtResource("5")

[node name="DeleteBtn" type="TextureButton" parent="VBoxContainer/HSplitContainer/Panel/ScrollContainer/NoteButtons/DefaultButton"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -27.3244
offset_top = -19.5
offset_right = -7.32443
offset_bottom = 20.5
pivot_offset = Vector2(10, 20)
focus_mode = 0
mouse_filter = 1
texture_normal = ExtResource("6")
stretch_mode = 5
script = ExtResource("5")

[node name="Tween" type="Tween" parent="VBoxContainer/HSplitContainer/Panel/ScrollContainer/NoteButtons/DefaultButton"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
editor_description = ""
script = null

[node name="Panel2" type="Panel" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("5")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/Panel2"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 30.0
offset_bottom = -15.0
theme = SubResource("10")
theme_override_constants/separation = 15

[node name="Title" type="TextEdit" parent="VBoxContainer/HSplitContainer/Panel2/VBoxContainer"]
modulate = Color(0.831373, 0.831373, 0.831373, 1)
custom_minimum_size = Vector2(0, 54.389)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2")
text = "Note title"
context_menu_enabled = false
caret_blink = true
highlight_all_occurrences = true

[node name="Note" type="TextEdit" parent="VBoxContainer/HSplitContainer/Panel2/VBoxContainer"]
modulate = Color(0.635294, 0.635294, 0.635294, 1)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/current_line_color = Color(0, 0, 0, 0.0862745)
theme_override_fonts/font = ExtResource("1")
text = "NOTE"
context_menu_enabled = false
minimap_draw = true
highlight_all_occurrences = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/Panel2/VBoxContainer"]
modulate = Color(1, 1, 1, 0.647059)
custom_minimum_size = Vector2(0, 29.071)
layout_mode = 2
theme = SubResource("11")
alignment = 2

[node name="CreatedLabel" type="Label" parent="VBoxContainer/HSplitContainer/Panel2/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.470588)
text = "Created"

[node name="Created" type="Label" parent="VBoxContainer/HSplitContainer/Panel2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "00/00/00"

[node name="Control" type="Control" parent="VBoxContainer/HSplitContainer/Panel2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="ModifiedLabel" type="Label" parent="VBoxContainer/HSplitContainer/Panel2/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.513726)
text = "Modified"

[node name="Modified" type="Label" parent="VBoxContainer/HSplitContainer/Panel2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "00/00/00"

[connection signal="text_changed" from="VBoxContainer/HSplitContainer/Panel2/VBoxContainer/Title" to="." method="_on_Title_text_changed"]
[connection signal="text_changed" from="VBoxContainer/HSplitContainer/Panel2/VBoxContainer/Note" to="." method="_on_Note_text_changed"]
